tests/NormalTests/paczka2/big_fuzzy/45062412.err
Error in line 4: lN0J177aDK A20 7,4
Error in line 15: lN0J177aDK A756 76,2
Error in line 9: EtV A756 67,0
Error in line 32: 27UucrK S376 47,79
Error in line 41: lEYSzE2zoYB S376 14,4
Error in line 37: S376 A20 28,2
Error in line 44: lEYSzE2zoYB S42 84,1
Error in line 49: EtV A20 21,5
Error in line 34: 27UucrK S376 75,2
Error in line 22: mJFCbjQNl7v A20 104,0
Error in line 82: lN0J177aDK S42 35,5
Error in line 76: S376 S376 184,7
Error in line 78: 27UucrK S42 8,7
Error in line 94: EtV A756 29,5
Error in line 96: EtV S42 96,1
Error in line 77: mJFCbjQNl7v A756 64,3
Error in line 113: 27UucrK S376 8,2
Error in line 115: 27UucrK S42 -5,3
Error in line 117: lEYSzE2zoYB S376 65,4
Error in line 103: lN0J177aDK A756 52,6
Error in line 129: 27UucrK A756 42,12
Error in line 114: 27UucrK S42 94,8
Error in line 137: nPAo0Q A756 45,4
Error in line 138: nPAo0Q A20 42,5
Error in line 128: mJFCbjQNl7v A756 81,0
Error in line 149: S376 A20 96,0
Error in line 164: 27UucrK A756 e96,9
Error in line 167: S376 S42 17,0
Error in line 193: S376 A20 177,5
Error in line 191: lN0J177aDK A756 72,4
Error in line 206: lEYSzE2zoYB S376 72,2
Error in line 215: mJFCbjQNl7v A756 8,9
Error in line 217: lEYSzE2zoYB S376 14,3
Error in line 224: lEYSzE2zoYB2A7562100,1
Error in line 208: nPAo0Q S42 45,4
Error in line 227: mJFCbjQNl7v A20 93,76
Error in line 225: mJFCbjQNl7v A20 39,0
Error in line 232: mJFCbjQNl7v S42 55,3
Error in line 234: lEYSzE2zoYB A20 80,06
Error in line 241: nPAo0Q A756 23,8
